--- a/02_preprocessing/01_tokenization.ipynb
+++ b/02_preprocessing/01_tokenization.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "674ee928",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
     "from transformers import BertTokenizer\n",
     "\n",
     "\n",
-    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')  # 소문자 기준\n",
     "\n",
     "#word = 'happy'\n",
     "word = 'unhappiness'\n",
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "2c7843fe",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "29a28164",
    "metadata": {},
    "outputs": [
