--- a/02_preprocessing/05_integer_encoding.ipynb
+++ b/02_preprocessing/05_integer_encoding.ipynb
@@ -1141,6 +1141,61 @@
     "# 단어 빈도 확인\n",
     "tokenizer.word_counts   # corpus의 전체 단어에 대한 빈도수을 OrderDict 형태로 반환"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08dde4ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[3, 2, 1, 1, 1, 1, 1, 7, 2, 1, 1, 8, 9],\n",
+       " [10, 1, 4, 1, 1, 1, 11, 1],\n",
+       " [1, 1, 11, 12, 1, 7, 1, 3, 2],\n",
+       " [3, 2, 1, 1, 13, 1, 1, 1, 1, 5, 1, 1],\n",
+       " [1, 1, 4, 1, 1, 1, 1],\n",
+       " [8, 1, 1, 1, 1, 1, 1, 1, 1, 1, 6],\n",
+       " [1, 2, 1, 1, 14, 1, 1, 1, 1, 1],\n",
+       " [9, 3, 2, 12, 1, 1, 1, 6, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       " [6, 1, 1, 1, 1, 1, 1, 1, 2, 1, 5],\n",
+       " [1, 3, 2, 1, 1, 1, 1, 1, 1, 1],\n",
+       " [1, 1, 4, 1, 1, 13, 1, 5],\n",
+       " [10, 1, 4, 1, 14, 1, 3, 2, 1, 1, 1],\n",
+       " [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 문장(토큰 리스트)을 단어 인덱스로 치환해 정수 시퀀스 리스트로 변환\n",
+    "sequences = tokenizer.texts_to_sequences(preprocessed_sentences)\n",
+    "sequences"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07b31d4c",
+   "metadata": {},
+   "source": [
+    "- 1<OOV>가 많은 이유는?\n",
+    "    - num_words=15 이기 때문에 상위 15개만 유효 단어로 사용하고, 나머지 단어들은 전부 OOV로 바뀌었다.\n",
+    "    - num_words를 사용안하면?\n",
+    "        - tokenizer.word_index에 있는 모든 단어가 그대로 인덱싱 된다.\n",
+    "        - 이 때 fit_on_texts 이후에 새로 등장하는 단어는 OOV로 가게 된다.\n",
+    "    - num_words 쓰는 경우\n",
+    "        - 실제 모델 학습 간 임베딩 테이블 크기 관리\n",
+    "        - 희귀 단어를 다 포함하면 노이즈 + 차원만 커짐 -> 일반화 성능이 떨어진다.\n",
+    "        - 그래서 상위 N개의 단어만 쓰고 나머지는 OOV 처리하는것이 일반적임.\n",
+    "    - num_words의 사용범위\n",
+    "        - 아주 작은 실습 / 토이 프로젝트 : num_words = 1000 ~ 5000\n",
+    "        - 간단한 분류 과제 : 5,000 ~ 20,000\n",
+    "        - 데이터가 아주 큰 경우 : 20,000 ~ 50,000"
+   ]
   }
  ],
  "metadata": {
